--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "This is for the Shopify Backend Intern Technical Challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node ./frontend/app.js",
+    "maybe": "nodemon ./frontend/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Peter Radev",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "chalk": "^5.0.1",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
